# vi3d

./: .gitignore  README.md
3rd/lua-5.3.3/: CMakeLists.txt  make_android.bat  make_ios.sh  make_linux.sh  make_mingw.sh  make_win64.bat
3rd/lua-5.3.3/build2/: CMakeCache.txt  cmake_install.cmake
3rd/lua-5.3.3/build2/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
3rd/lua-5.3.3/build2/lua.build/Debug-iphonesimulator/ALL_BUILD.build/: Script-574A7EB7CCBB42709421D7BB.sh  dgph
3rd/lua-5.3.3/build2/lua.build/Debug-iphonesimulator/ZERO_CHECK.build/: dgph
3rd/lua-5.3.3/build2/lua.build/Debug-iphonesimulator/lua.build/: dgph  dgph~
3rd/lua-5.3.3/build2/lua.build/Debug-iphonesimulator/lua.build/Objects-normal/i386/: ldblib.d  ldebug.d  lfunc.d  liolib.d  loslib.dia  ltablib.d  lua.LinkFileList  lutf8lib.d  lvm.d
3rd/lua-5.3.3/build2/lua.build/Debug-iphonesimulator/lua.build/Objects-normal/x86_64/: lcode.d  lcorolib.d  lmem.d  loadlib.d  lobject.d  lstring.d  ltable.d  lua.LinkFileList  lundump.d  lzio.d
3rd/lua-5.3.3/build2/lua.build/Release-iphonesimulator/ALL_BUILD.build/: dgph
3rd/lua-5.3.3/build2/lua.build/Release-iphonesimulator/ZERO_CHECK.build/: Script-8277F56D5ABF43039837062E.sh  dgph
3rd/lua-5.3.3/build2/lua.build/Release-iphonesimulator/lua.build/: dgph
3rd/lua-5.3.3/build2/lua.build/Release-iphonesimulator/lua.build/Objects-normal/i386/: lapi.d  lbitlib.d  ldo.d  ldump.d  lmathlib.d  lopcodes.d  lparser.d  lua.LinkFileList
3rd/lua-5.3.3/build2/lua.build/Release-iphonesimulator/lua.build/Objects-normal/x86_64/: lauxlib.d  lbaselib.d  lctype.d  lgc.d  linit.d  llex.d  loslib.d  (+4 more)
3rd/lua-5.3.3/build2/lua.xcodeproj/: project.pbxproj
3rd/lua-5.3.3/cmake/: android.toolchain.cmake
3rd/lua-5.3.3/lib_win64/: lua.lib
(+172 files in other folders)
